APF-1963 Fix app install action.